add edit/view source features

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@ site_name: ExaCheck - BGP Health Checker
 repo_url: https://github.com/exacheck/exacheck
 repo_name: exacheck/exacheck
 copyright: Copyright &copy; 2024 ExaCheck. ExaCheck is not associated with or endorsed by <a href="https://github.com/Exa-Networks/exabgp">ExaBGP</a> or <a href="https://exa.net.uk/">Exa Networks</a>.
+edit_uri: https://github.com/exacheck/exacheck-website/edit/main/docs/
 
 theme:
   name: material
@@ -14,6 +15,8 @@ theme:
 
   features:
     - content.code.copy
+    - content.action.edit
+    - content.action.view
     - navigation.instant
     - navigation.instant.progress
     - navigation.tabs
